<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>loomtest</groupId>
    <artifactId>game-of-life</artifactId>
    <packaging>jar</packaging>
    <name>Game of Life Demo</name>
    <version>1.0.0-SNAPSHOT</version>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgument>--enable-preview</compilerArgument>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>0.9.13</version>
                    <extensions>true</extensions>
                    <executions>
                    <execution>
                        <id>build-native</id>
                        <goals>
                        <goal>build</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                    </executions>
                    <configuration>
                        <mainClass>gameoflife.Main</mainClass>
                        <buildArgs>
                            <arg>--enable-preview</arg>
                            <arg>--install-exit-handlers</arg>
                            <!-- <arg>\-\gc=G1</arg> -->
                            <!-- <arg>\-\-pgo-instrument</arg> -->
                            <!-- <arg>\-\-pgo=${project.basedir}/default.iprof</arg> -->
                        </buildArgs>
                    </configuration>
                </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
